--- a/AULA 04 - 04_09_25/CadastroPessoas/untitled/pom.xml
+++ b/AULA 04 - 04_09_25/CadastroPessoas/untitled/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>SmartList</artifactId>
+    <artifactId>ListaExercício</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,11 +13,13 @@
         <maven.compiler.target>24</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.19.2</version>
+            <version>2.18.2</version>
         </dependency>
     </dependencies>
+
 </project>
