Add study materials and Kahoot answers for OOP
Added a complete guide for the OOP exam, Kahoot answers covering binary/text/JSON files, design patterns, and streams, and a Kahoot PDF on patterns. These resources support exam preparation and review of key course topics.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ AULA 06 - 18_09_25/Kahoot_ArquivosBinários.pdf
 AULA 06 - 18_09_25/Kahoot_ArquivosTexto.pdf
 AULA 06 - 18_09_25/Kahoot_Json.pdf
 AULA 06 - 18_09_25/Kahoot_Streams.pdf
+AULA 06 - 18_09_25/Kahoot_Padrões1.pdf
